=Version 2.0.3= [ NYR ]
  * jaunty compilation warnings fix (?)

=Version 2.0.2=
  * Distinguish between signal termination and all other terminations.

=Version 2.0.1=
  * Set poll timeout to handle race condition with signal.
  * Handle POLLERR.

=Version 2.0.0=
  * Send fuse_ctx information to Erlang.

=Version 1.0.2=
  * Freebsd7 fixes.

=Version 1.0.1=
  * MacFuse tweaks 

=Version 1.0.0=
  * Switch to using low level fuse interface (eliminates threads).

=Version 0.0.2=
  * Fixed pthread_cond_wait problem (mutex was not locked).
  * Freebsd7 fixes (realpath/getattr deadlock).

=Version 0.0.1=
  * 32 bit portability fixes.
  * Darwin portability fixes.

=Version 0.0.0=
  * Initial version.